# SeaDrop

./: .gitignore  README FIRST.txt  README.md
.kilo/plans/: 1782003361186-seadrop-v1.5-implementation-plan.md
android/: build.gradle.kts  gradle.properties  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
docs/: AGENTS.md  SeaDrop_Specification.docx  SeaDrop_Specification_v1.3.docx  SeaDrop_Specification_v1.3.txt  SeaDrop_Specification_v1.4.docx  SeaDrop_Specification_v1.4.md  SeaDrop_Specification_v1.5.docx  SeaDrop_Specification_v1.5.txt
firmware/: CMakeLists.txt  build_flash.ps1  monitor.ps1
firmware/main/: CMakeLists.txt  ble_server.cpp  ble_server.hpp  display.cpp  display.hpp  globals.hpp  main.cpp  ncsi.cpp  ncsi.hpp  protocol.hpp  stp.hpp  stp_server.cpp  stp_server.hpp  transfer.cpp  transfer.hpp
windows/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Program.cs  SeaDrop.sln  SeaDropWindows.csproj  SeaDrop_TemporaryKey.pfx  WizardWindow.cs  app.manifest  install.ps1
windows/PriTasksStub/: PriTasksStub.csproj
windows/SeaDrop.ShellExtension/: SeaDrop.ShellExtension.csproj  SeaDropExplorerCommand.cs
windows/core/: SeaDropService.cs  TcpClient.cs  TcpInboundListener.cs
windows/network/: BleWatcher.cs  ChannelDetector.cs  HotspotManager.cs
windows/notification/: ToastHelper.cs
windows/registration/: RegistrationManager.cs
windows/shell/: SeaDropContextMenu.cs
windows/storage/: CredentialStore.cs
windows/stp/: StpCommand.cs  StpParser.cs
windows/transfer/: FileHelper.cs  (+2 more)
(+36 files in other folders)
